maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: value &&! is not a member of Boolean
 	if(a==0 &&!estFaceMur){
                ^